# gl

./: .clang-format  CMakeLists.txt  Camera.h  Cargo.toml  README.md  Shader.cpp  Shader.h  Util.cpp  Util.h  main.cpp  run.sh
c++/: Camera.cpp  Util.h  triangle1.frag  triangle1.vert  triangle2.frag  triangle2.vert
rust/shader/: triangle.frag
rust/src/: camera.rs  main.rs  shader.rs
rust/src/shader/: uniform.rs
shader/: triangle.frag  triangle.vert
src/: BufferObject.h  CMakeLists.txt  Camera.cpp  Camera.h  Debug.cpp  Debug.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Util.cpp  Util.h  VertexArray.cpp  VertexArray.h  buffer.rs  camera.rs  main.cpp  main.rs  object.rs  resource.rs  shader.rs  texture.rs  util.rs
src/buffer/: attrib.rs
src/object/: test_cube.rs
src/shader/: uniform.rs
